--- a/environment_root.yml
+++ b/environment_root.yml
@@ -21,15 +21,32 @@ dependencies:
   - pip:
       - cffi==1.15.1
       - cloudpickle==2.2.1
+      - contourpy==1.0.7
+      - cycler==0.11.0
       - cython==0.29.33
       - fasteners==0.18
+      - fonttools==4.38.0
       - glfw==2.5.5
-      - gym==0.26.2
+      - gym==0.21.0
       - gym-notices==0.0.8
       - imageio==2.25.0
+      - importlib-metadata==4.13.0
+      - kiwisolver==1.4.4
+      - matplotlib==3.6.3
       - mujoco-py==2.1.2.14
       - numpy==1.24.1
+      - packaging==23.0
+      - pandas==1.5.3
       - pillow==9.4.0
       - pycparser==2.21
+      - pyglet==1.5.27
+      - pyparsing==3.0.9
+      - python-dateutil==2.8.2
+      - pytz==2022.7.1
       - scipy==1.10.0
+      - six==1.16.0
+      - stable-baselines3==1.7.0
+      - torch==1.13.1
+      - typing-extensions==4.4.0
+      - zipp==3.12.0
 prefix: /Users/omeedtehrani/miniconda3/envs/robin-research
